<resources>
    <string name="app_name">MelvinToolBoxAndroid</string>
    <string name="welcome">Bienvenue</string>
    <string name="menu_cycle">Cycle de vie</string>
    <string name="menu_save">Sauvegarde</string>
    <string name="menu_permissions">Permissions</string>
    <string name="menu_webservices">Webservices</string>
    <string name="logout">Déconnexion</string>
    <string name="formulaire">Formulaire</string>
    <string name="firstName">Prénom</string>
    <string name="lastname">Nom de famille</string>
    <string name="contactM">Contact de Melvin Marra</string>
    <string name="info">Acces aux informations android</string>
    <string name="RandomName">Nom</string>
    <string name="RandomAddress">Adresse</string>
    <string name="RandomEmail">Email</string>
    <string name="titleWebActivity">Web service</string>
    <string name="generate">Générer utilisateurs</string>
    <string name="connexion">Connexion</string>
    <string name="confirm">Confirmer</string>
    <string name="id">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="ble">Bluetooth</string>
    <string name="choice">Choisissez une activité</string>
    <string name="num">Phone number</string>
    <string name="retour">Retour</string>
    <string name="lifeCycle">Cycle de vie</string>
    <string name="dob">Date de naissance (appuyez ici)</string>
    <string name="scanBleTxt">Lancer le scan bluetooth</string>
    <string name="bleFail">Erreur, scan bluetooth non compatible</string>
    <string name="nameDevice">Nom du device </string>
    <string name="mac">Adresse mac</string>
    <string name="rssi">RSSI</string>
    <string name="BLE">Bluetooth</string>
    <string name="scanGo">Lancer le scan</string>
    <string name="scanEnCours">Scan en cours … </string>
    <string name="properties">Proprietes</string>
    <string name="uuid">UUID</string>
    <string name="value">Valeur</string>
    <string name="read">Lire</string>
    <string name="write">Ecrire</string>
    <string name="notify">Notifier</string>
    <string name="waiting">En attente de connexion … </string>
    <string name="service_name">Nom du service</string>
    <string name="arrow_down">Arrow down</string>
    <string name="lancerScan">Lancer le scan bluetooth</string>
    <string name="etat">State</string>
    <string name="userDetail">Details</string>
    <string name="title">Titre</string>
    <string name="city">Ville</string>
    <string name="postcode">Code postal</string>
    <string name="pays">Pays</string>
    <string name="nom">Nom</string>
    <string name="show">Voir</string>
    <string name="permissionBack">Sortez de cette activite puis entrez a nouveau pour voir apparaitre les contacts</string>
    <string name="saisie">Saisissez une valeur</string>
    <string name="contentBle">Image play et pause du scan ble</string>
    <string name="contentHomeCycle">Bouton pour acceder au cycle de vie de l application</string>
    <string name="contentHomeWeb">Bouton pour acceder a la generation de profil aleatoire</string>
    <string name="contentHomePermission">Bouton qui permet d acceder au repertoire</string>
    <string name="contentHomeBle">Bouton qui permet d acceder a la fonctionnalite ble</string>
    <string name="contentHomeSave">Bouton qui permet d enregistrer son profil</string>
    <string name="contentPermissionCamera">Permet de choir une photo de profil</string>

</resources>
